@@ -1,3 +1,8 @@
+2004-01-22  Pavel Roskin  <proski@gnu.org>
+
+	* samba/configure.in: Rename to ...
+	* samba/configure.ac: ... this.  Adjust dependencies.
+
 2003-12-05  Andrew V. Samoilov  <sav@bcs.zp.ua>
 
 	* fish.c (fish_open_archive_int): Save some stack and place -C
